consolidated into single API, and began Istio use case implementation
